--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Your Name] - Computer Science Student</title>
+    <title>ISAHNOUNEN MOKRANE - Computer Science Student</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
 
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#hero" class="nav-logo">[Your Name]</a>
+            <a href="#hero" class="nav-logo">ISAHNOUNEN MOKRANE</a>
             
             <button class="nav-toggle" id="nav-toggle-btn">
                 <i class="fas fa-bars"></i>
