Fix formatting in about section of index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img src="https://avatars.githubusercontent.com/u/210035102?s=400&u=2c1376ea42c4c9e7b6ebc21ac8bb46e1a2a16a54&v=4" alt="A photo of [Your Name]">
                 </div>
                 <div class="about-text">
-                    <p><p>I am a 3rd-year Computer Science student at the University of Bouira, specializing in Information Systems.Passionate about technological innovation , I approach problem-solving with a structured method and a keen eye for detail. I am autonomous, organized , and a quick learner when it comes to new technologies. I also value teamwork and am looking to apply my skills in a challenging professional environment.</p>
+                    <p>I am a 3rd-year Computer Science student at the University of Bouira, specializing in Information Systems . Passionate about technological innovation , I approach problem-solving with a structured method and a keen eye for detail. I am autonomous, organized , and a quick learner when it comes to new technologies. I also value teamwork and am looking to apply my skills in a challenging professional environment.</p>
                 </div>
             </div>
             
