Update email link to use mailto format

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <section id="contact" class="page-section fade-in">
             <h2>Get In Touch</h2>
             <p>I'm always open to new opportunities and collaborations.</p>
-            <a href="mokrane.isahnounen@univ-bouira.dz" class="btn">Email Me</a>
+            <a href="mailto:[mokrane.isahnounen@univ-bouira.dz]" class="btn">Email Me</a>
             <div class="social-links">
                 <a href="[Your LinkedIn URL]" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/mokrane-ish" target="_blank"><i class="fab fa-github"></i></a>
