Update project links to point to live resources

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <h3>Web Calculator</h3>
                     <p>A simple calculator built as a fun project to practice and experiment with HTML, CSS, and JavaScript logic</p>
                     <div class="project-links">
-                        <a href="[Link to GitHub Repo]" target="_blank" class="btn-secondary">GitHub</a>
-                        <a href="[Link to Live Demo]" target="_blank" class="btn-secondary">Live Demo</a>
+                        <a href="https://github.com/mokrane-ish/DAW-project" target="_blank" class="btn-secondary">GitHub</a>
+                        <a href="https://mocalc.netlify.app" target="_blank" class="btn-secondary">Live Demo</a>
                     </div>
                 </div>
 
