Revise project card content in index.html
Updated project details for the Internal HR Management System.

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 </div>
 
                 <div class="project-card">
-                    <h3>my project</h3>
-                    <p>it's a surprise </p>
+                    <h3>Internal HR Management System</h3>
+                    <p>A secure, role-based web application designed to streamline employee management within a company. The system implements distinct access levels for different departments</p>
                     <div class="project-links">
-                        <a href="[Link to GitHub Repo]" target="_blank" class="btn-secondary">GitHub</a>
+                         <a href="https://mohrap.wuaze.com/index.php" target="_blank" class="btn-secondary">Live Demo</a>
                     </div>
                 </div>
                 
